# celery-study

./: README.md  example.env  manage.py  pyproject.toml
cafeteria/: apps.py  tasks.py
cafeteria/management/commands/: feed_hamster.py
celery_study/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
learn_celery/: asgi.py  settings.py  urls.py  wsgi.py
