[tool.poetry]
name = "celery-study"
version = "0.1.0"
description = ""
authors = ["Wibaek Park <devmuromi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
django = "^5.1.2"
celery = {extras = ["sqs"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120